Update Pages, Added fonts, Added images

--- a/assignment-13/css/style.css
+++ b/assignment-13/css/style.css
@@ -1,21 +1,192 @@
-body {
-    background-image: url("");
-    min-height: 500px;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
- 
+@font-face {
+    font-family: Gyosho;
+    src: url(../fonts/Gyosho.ttf);
+    font-weight: normal;
+  }
+  @font-face {
+    font-family: Harukaze;
+    src: url(../fonts/Harukaze.ttf);
+    font-weight: normal;
+  }
+  @font-face {
+    font-family: Yozakura;
+    src: url(../fonts/YOZAKURA-Regular.otf);
+    font-weight: normal;
+  }
+  @font-face {
+    font-family: aAnnyeongHaseyo;
+    src: url(../fonts/aAnnyeongHaseyo.ttf);
+    font-weight: normal;
+  }
+  @font-face {
+    font-family: Korean Calligraphy;
+    src: url(../fonts/Korean_Calligraphy.ttf);
+    font-weight: normal;
+  }
+
+#logo1{
+    position: fixed;
+    top: 20px;
+    left: 60px;
+    max-height: 200px;
+    padding: 5px;
+}
+
+header {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    color: rgb(186, 37, 37);
+    background-color: black;
+    font-family: 'Yozakura', sans-serif;
+    font-size: 60px;
+    letter-spacing: 2px;
+    line-height: 0%;
+    padding-left: 260px;
+    padding-top: 0px;
+    padding-bottom: 5px;
+    text-align: left; 
+    height: 230px;
+    width: 100%;
+}
+
+#main{
+    color: black;
+    background-color: white;
+    font-family: 'Korean Calligraphy', sans-serif;
+    
+    
+    font-style: normal;
+    padding-top: 300px;
+    padding-bottom: 20px;
+    text-align: left;
+
+}
+
+#contact {
+    color: black;
+    background-color: white;
+    font-family: sans-serif;
+    font-size: larger;
+    font-weight: bold;
+    font-style: normal;
+    padding-top: 300px;
+    padding-bottom: 20px;
+    text-align: center;
+}
+
+table {
+    width: 25%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#menu {
+    color: black;
+    background-color: white;
+    font-family: sans-serif;
+    font-style: normal;
+    padding-top: 300px;
+    padding-bottom: 20px;
+    text-align: center;
 }
 
 
-.text {
-    position: static;
-    color: black;
-    padding-left: 80px;
-    padding-right: 80px;
-    background : rgb(255, 255, 255, 0.9);
-    width: 45em;
-    margin: auto;
+#image1 {
+    float: left;
+    padding: 50px;
+}
+
+
+#image2 {
+    float: right;
+    padding: 40px;
     
 }
+
+#image3 {
+    float: right;
+    padding: 50px;
+}
+
+a:link {
+    color: black;
+    font-style: normal;
+    text-decoration: none;
+    
+ }
+
+a:hover {
+    color: rgb(186, 37, 37);
+    
+ }
+
+ menu {
+    position: fixed;
+    top: 220px;
+    left: 0px;
+    padding-left: 200px;
+    background-color: rgb(186, 37, 37);
+    font-family: 'Korean Calligraphy',sans-serif;
+    text-transform: uppercase;
+    margin-top: 0;
+    height: 4em;
+    width: 100%;
+    text-align: left;
+}
+
+.menu-item {
+    display: inline-block;
+    margin: 1em .2em;
+    min-width: 6em;
+    text-align: center;
+    background-color: rgb(186, 37, 37);
+    padding: 0.5em 1em;
+}
+
+.menu-item a {
+    color: white;
+    text-decoration: none;
+}
+
+.menu-item:hover {
+    background-color: rgba(170, 170, 170, 0.2);
+    color: black
+}
+
+.dropdown {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    border: 1px solid rgb(186, 37, 37);
+    margin: 0.5em 0 0 -1em;
+    color: rgb(186, 37, 37);
+    background-color: white;
+    z-index: 1;
+}
+.dropdown-content a {
+    color: rgb(186, 37, 37);
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown-item {
+    display: block;
+    text-align: left;
+    margin: 0;
+    padding: 0.5em 1em 0.5em 1em;
+    min-width: 5.9em;
+}
+
+.dropdown-item:hover, .dropdown-item:hover a {
+    color: black;
+    background-color: rgba(170, 170, 170, 0.1);
+    
+}
+
