added text to index and fixed some errors

--- a/final/css/style.css
+++ b/final/css/style.css
@@ -14,13 +14,20 @@
     font-weight: normal;
   }
 
-/*#logo1{
+#recent {
     position: fixed;
-    top: 20px;
-    left: 60px;
-    max-height: 200px;
-    padding: 5px;
-}*/
+    color: #27496d;
+    
+    height: 15px;
+    width: 100%;
+    left: 0px;
+    top: 415px;
+    font-family: 'GG Extralight', Arial, sans-serif;
+    font-weight: normal;
+    font-size: 35px;
+    text-align: center;
+    padding-top: 35px;
+}
 
 .logo1{
     content:url("../images/Logo_1.png");
@@ -97,6 +104,7 @@ header {
     width: 1.8%;
     padding: 5px;
     padding-top: 6px;
+    margin-right: 10px;
   }
   
   /* Clear floats after image containers */
@@ -281,7 +289,12 @@ a:hover {
   }
   
   /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #f1f1f1}
+  .dropdown-content a:hover {
+    background-color: #f1f1f1;
+    border-radius: 10%;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+  
   
   /* Show the dropdown menu on hover */
   .dropdown:hover .dropdown-content {
@@ -290,7 +303,7 @@ a:hover {
   
 
 table {
-    padding-top: 60px;
+    padding-top: 70px;
     border-spacing: 70px;
     animation: tableAnim 240s linear 0s infinite normal forwards;
 }
