--- a/final/css/style.css
+++ b/final/css/style.css
@@ -120,6 +120,17 @@ header {
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
+#contact{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background-color: white;
+    font-family: 'GG Extralight', Arial, sans-serif;
+    font-size: 20px;
+    margin-top: 0;
+    width: 100%;
+    text-align: center;
+}
 
 menu {
     position: fixed;
