--- a/final/css/style.css
+++ b/final/css/style.css
@@ -82,12 +82,13 @@
   }
 
 .logo2{
+    position: fixed;
     content: url("../images/Logo_2.png");
     display: block;
     max-width: 8%;
-    float: left;
-    padding-left: 0;
-    padding-top: 4px;
+    top: 4px;
+    left: 4px;
+    
     
 }
 
@@ -131,7 +132,7 @@ header {
 }
 
 .header2 {
-    position: absolute;
+    position: fixed;
     top: 50px;
     left: 0px;
     background: #27496d;
@@ -159,7 +160,7 @@ header {
 }
 
 .header3 {
-    position: absolute;
+    position: fixed;
     top: 50px;
     left: 0px;
     background: #547aa2;
@@ -187,7 +188,7 @@ header {
 }
 
 .header4 {
-    position: absolute;
+    position: fixed;
     top: 50px;
     left: 0px;
     background: #17324f;
@@ -401,15 +402,43 @@ header {
     }
 }
 
-td img{
-    max-height: 150px;
+.slide img{
+    max-height: 300px;
     padding: 5px;
 }    
 
 /* For width 600px and larger: */
 @media only screen and (min-width: 600px) {
-    td img{
+    .slide img{
         max-height: 300px;
+        padding: 5px;
+    }        
+}
+.table1 img{
+    max-height: 150px;
+    padding: 10px;  
+}        
+
+
+/* For width 600px and larger: */
+@media only screen and (min-width: 600px) {
+    .table1 img{
+        max-height: 300px;
+        padding: 10px;  
+    }        
+}
+
+.table2 img{
+    max-width: 200px;
+    padding: 8px; 
+    padding-left: 20px; 
+}        
+
+
+/* For width 600px and larger: */
+@media only screen and (min-width: 600px) {
+    .table2 img{
+        max-width: 500px;
         padding: 10px;  
     }        
 }
@@ -505,7 +534,7 @@ a:hover {
  }
 
     menu {
-    position: absolute;
+    position: fixed;
     top: 0px;
     background-color: white;
     font-family: 'GG Extralight', Arial, sans-serif;
