--- a/final/css/style.css
+++ b/final/css/style.css
@@ -353,10 +353,12 @@ header {
     font-family: 'GG Light', Arial, sans-serif;
     font-size: 16px;
     margin-top: 0;
+
     width: 100%;
     text-align: center;
 
-    padding: 30px;
+    padding- top: 20px;
+   
 
 }
 
