--- a/final/css/style.css
+++ b/final/css/style.css
@@ -114,7 +114,7 @@ header {
     text-align: center; 
     height: 160px;
     width: 100%;
-    padding-top: 20px;
+    padding-top: 30px;
 }
 
 
@@ -133,14 +133,14 @@ header {
 }
 
 .header2 {
-    position: fixed;
+    position: absolute;
     top: 50px;
     left: 0px;
     background: #27496d;
     color: white;
     font-family: 'GG Light', Arial, sans-serif;
     text-align: center; 
-    height: 60px;
+    height: 50px;
     width: 100%;
 }
 
@@ -161,7 +161,7 @@ header {
 }
 
 .header3 {
-    position: fixed;
+    position: absolute;
     top: 50px;
     left: 0px;
     background: #547aa2;
@@ -189,7 +189,7 @@ header {
 }
 
 .header4 {
-    position: fixed;
+    position: absolute;
     top: 50px;
     left: 0px;
     background: #17324f;
@@ -352,12 +352,10 @@ header {
     background-color: white;
     font-family: 'GG Light', Arial, sans-serif;
     font-size: 16px;
-    margin-top: 0;
-
+    margin-top: 20;
     width: 100%;
     text-align: center;
-
-    padding- top: 20px;
+    padding: 20px;
    
 
 }
@@ -539,7 +537,7 @@ a:hover {
  }
 
     menu {
-    position: fixed;
+    position: absolute;
     top: 0px;
     background-color: white;
     font-family: 'GG Extralight', Arial, sans-serif;
@@ -695,8 +693,8 @@ a:hover {
   }
 
   .submenu {
-    position: fixed;
-    top: 100px;
+    position: absolute;
+    top: 110px;
     right: 0px;
     padding-left: 0px;
     background-color: white;
